Fixed text tab local storage issues

--- a/src/App.css
+++ b/src/App.css
@@ -168,8 +168,6 @@
   width: auto;
   text-align:justify;
   height: 68vh;
-  overflow-x: hidden;
-  overflow-y:auto;
   
 }
 
@@ -204,7 +202,7 @@
 }
 
 /* https://www.w3schools.com/howto/howto_css_full_page.asp */
-#homePage{
+.homePage{
   height: 100vh;
   background-image: url("https://images.unsplash.com/photo-1553782749-5ab8693a5f4f?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1078&q=80");
   background-position: center;
@@ -412,6 +410,9 @@ a:visited {
 #speakerSpeeches {
   padding-top: 20px;
   padding-right: 10px;
+  overflow-x: hidden;
+  overflow-y:auto;
+  height: 50vh;
   
 }
 
@@ -430,9 +431,14 @@ a:visited {
   transition: all 0.7s;
 }
 
+/* Default page transition group CSS */
+
+
+
+
 /* Default page CSS*/
 
-#defaultPage {
+.defaultPage {
   display: grid;
   grid-template-rows: 0.5fr;
   gap: 1rem;
