--- a/src/App.css
+++ b/src/App.css
@@ -885,3 +885,14 @@ button.link {
   background-color: rgba(50, 224, 195, 0.918);
   transition: all 0.7s;
 }
+
+.fade-appear {
+  opacity: 0;
+  transform: scale(0.2);
+}
+
+.fade-appear-active {
+  opacity: 1;
+  transform: scale(1);
+  transition: all 1000ms;
+}
